# SM-Team-Zabbix

./: .env  .gitignore  Makefile  README.md  build.json  compose.yaml  compose_databases.yaml  compose_pgsql.yaml  compose_zabbix_components.yaml  docker-bake.hcl  docker-compose_v3_alpine_mysql_latest.yaml  docker-compose_v3_alpine_mysql_local.yaml  docker-compose_v3_alpine_pgsql_latest.yaml  docker-compose_v3_alpine_pgsql_local.yaml  docker-compose_v3_centos_mysql_latest.yaml  docker-compose_v3_centos_mysql_local.yaml  docker-compose_v3_centos_pgsql_latest.yaml  docker-compose_v3_centos_pgsql_local.yaml  docker-compose_v3_ol_mysql_latest.yaml  docker-compose_v3_ol_mysql_local.yaml  docker-compose_v3_ol_pgsql_latest.yaml  docker-compose_v3_ol_pgsql_local.yaml  docker-compose_v3_ubuntu_mysql_latest.yaml  docker-compose_v3_ubuntu_mysql_local.yaml  docker-compose_v3_ubuntu_pgsql_latest.yaml  docker-compose_v3_ubuntu_pgsql_local.yaml  zabbix_agent2.conf
.github/: dependabot.yml
.github/actions/attest-image/: action.yml
.github/actions/build-image/: action.yml
.github/actions/cosign-install/: action.yml
.github/actions/cosign-sign/: action.yml
.github/actions/cosign-verify/: action.yml
.github/actions/docker-build-push-linux/: action.yml
.github/actions/docker-build-push-windows/: action.yml
.github/actions/docker-linux-setup/: action.yml
.github/actions/docker-meta/: action.yml
.github/actions/get-branch-info/: action.yml
.github/scripts/: requirements-rhel-description.txt  rhel_description.py
.github/workflows/: dependency-review.yml  dockerhub_description.yml  images_build.yml  images_build_rhel.yml  images_build_windows.yml  rhel_registry_description.yml  scorecard.yml  sonarcloud.yml
Dockerfiles/agent/: README.md
Dockerfiles/agent/alpine/: Dockerfile
Dockerfiles/agent/centos/: Dockerfile
Dockerfiles/agent/ol/: Dockerfile
Dockerfiles/agent/rhel/: Dockerfile
Dockerfiles/agent/ubuntu/: Dockerfile
Dockerfiles/agent/windows/: Dockerfile
Dockerfiles/agent2/: README.md
Dockerfiles/agent2/alpine/: Dockerfile
Dockerfiles/agent2/centos/: Dockerfile
Dockerfiles/agent2/ol/: Dockerfile
Dockerfiles/agent2/rhel/: Dockerfile  Dockerfile.cuda
Dockerfiles/agent2/ubuntu/: Dockerfile
Dockerfiles/agent2/windows/: Dockerfile
Dockerfiles/build-base/: README.md
Dockerfiles/build-base/alpine/: Dockerfile
Dockerfiles/build-base/centos/: Dockerfile
Dockerfiles/build-base/ol/: Dockerfile
Dockerfiles/build-base/rhel/: Dockerfile
Dockerfiles/build-base/ubuntu/: Dockerfile
Dockerfiles/build-base/windows/: CMakeLists.txt  Dockerfile.agent  Dockerfile.agent2
Dockerfiles/build-mysql/: README.md
Dockerfiles/build-mysql/alpine/: Dockerfile
Dockerfiles/build-mysql/centos/: Dockerfile
Dockerfiles/build-mysql/ol/: Dockerfile
Dockerfiles/build-mysql/rhel/: Dockerfile
Dockerfiles/build-mysql/ubuntu/: Dockerfile
Dockerfiles/build-mysql/windows/: Dockerfile.agent  Dockerfile.agent2
Dockerfiles/build-pgsql/: README.md
Dockerfiles/build-pgsql/alpine/: Dockerfile
Dockerfiles/build-pgsql/centos/: Dockerfile
Dockerfiles/build-pgsql/ol/: Dockerfile
Dockerfiles/build-pgsql/rhel/: Dockerfile
Dockerfiles/build-pgsql/ubuntu/: Dockerfile
Dockerfiles/build-sqlite3/: README.md
Dockerfiles/build-sqlite3/alpine/: Dockerfile
Dockerfiles/build-sqlite3/centos/: Dockerfile
Dockerfiles/build-sqlite3/ol/: Dockerfile
Dockerfiles/build-sqlite3/rhel/: Dockerfile
Dockerfiles/build-sqlite3/ubuntu/: Dockerfile
Dockerfiles/java-gateway/: README.md
Dockerfiles/java-gateway/alpine/: Dockerfile
Dockerfiles/java-gateway/centos/: Dockerfile
Dockerfiles/java-gateway/ol/: Dockerfile
Dockerfiles/java-gateway/rhel/: Dockerfile
Dockerfiles/java-gateway/ubuntu/: Dockerfile
Dockerfiles/proxy-mysql/: README.md
Dockerfiles/proxy-mysql/alpine/: Dockerfile
Dockerfiles/proxy-mysql/centos/: Dockerfile
Dockerfiles/proxy-mysql/ol/: Dockerfile
Dockerfiles/proxy-mysql/rhel/: Dockerfile
Dockerfiles/proxy-mysql/ubuntu/: Dockerfile
Dockerfiles/proxy-sqlite3/: README.md
Dockerfiles/proxy-sqlite3/alpine/: Dockerfile
Dockerfiles/proxy-sqlite3/centos/: Dockerfile
Dockerfiles/proxy-sqlite3/ol/: Dockerfile
Dockerfiles/proxy-sqlite3/rhel/: Dockerfile
Dockerfiles/proxy-sqlite3/ubuntu/: Dockerfile
Dockerfiles/server-mysql/: README.md
Dockerfiles/server-mysql/alpine/: Dockerfile
Dockerfiles/server-mysql/centos/: Dockerfile
Dockerfiles/server-mysql/ol/: Dockerfile
Dockerfiles/server-mysql/rhel/: Dockerfile
Dockerfiles/server-mysql/ubuntu/: Dockerfile
Dockerfiles/server-pgsql/: README.md
Dockerfiles/server-pgsql/alpine/: Dockerfile
Dockerfiles/server-pgsql/centos/: Dockerfile
Dockerfiles/server-pgsql/ol/: Dockerfile
Dockerfiles/server-pgsql/rhel/: Dockerfile
Dockerfiles/server-pgsql/ubuntu/: Dockerfile
Dockerfiles/snmptraps/: README.md
Dockerfiles/snmptraps/alpine/: Dockerfile
Dockerfiles/snmptraps/centos/: Dockerfile
Dockerfiles/snmptraps/ol/: Dockerfile
Dockerfiles/snmptraps/rhel/: Dockerfile
Dockerfiles/snmptraps/ubuntu/: Dockerfile
Dockerfiles/web-apache-mysql/: README.md
Dockerfiles/web-apache-mysql/alpine/: Dockerfile  docker-entrypoint.sh
Dockerfiles/web-apache-pgsql/: README.md
Dockerfiles/web-nginx-mysql/: README.md
Dockerfiles/web-nginx-pgsql/: README.md
Dockerfiles/web-service/: README.md
env_vars/: .env_web  chrome_dp.json
(+43 files in other folders)
